--- a/2_trimestre/listaAtividades_02/01_trocarVariaveis.html
+++ b/2_trimestre/listaAtividades_02/01_trocarVariaveis.html
@@ -6,10 +6,16 @@
     */
 
     //ENTRADA
-
+    let num1 = Number (prompt(`informe um número `))
+    let num2 = Number (prompt(`informe outro número `))
+    const num3 = num2
     //PROCESSAMENTO
+    num2 = num1   
+    num1 = num3
+
+
 
     //SAÍDA
-
-    
+    alert(`antigos: N1= ${num2} - N2=${num1}  --  novos: N1=${num1} - N2=${num2}`)
+   
 </script>
